# quartofetch

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-publish.yml
src/qfetch/: __init__.py  cli.py  exceptions.py
src/quarto_paper_fetcher/: __init__.py  cli.py  exceptions.py  logging_config.py  paper_manager.py  quarto_project.py
tests/: test_paper_fetcher.py
