[project]
name = "quarto-paper-fetcher"
version = "0.1.0"
description = "Fetch and mangage Quarto paper repositories"
readme = "README.md"
authors = [
    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
qfetch = "quarto_paper_fetcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyproject.toml"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """-v -ra --tb=short"""
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "pytest-loguru>=0.4.0",
    "pytest>=8.3.3",
]
